@@ -103,3 +103,23 @@ UNION
 SELECT fd.feature_id, d.accession FROM feature_dbxref fd, dbxref d
   WHERE fd.dbxref_id = d.dbxref_id;
 
+
+DROP VIEW all_feature_names;
+CREATE OR REPLACE VIEW all_feature_names (
+  feature_id,
+  name,
+  organism_id
+) AS
+SELECT feature_id,CAST(substring(uniquename from 0 for 255) as varchar(255)) as name,organism_id FROM feature
+UNION
+SELECT feature_id, name, organism_id FROM feature where name is not null
+UNION
+SELECT fs.feature_id,s.name,f.organism_id FROM feature_synonym fs, synonym s, feature f
+  WHERE fs.synonym_id = s.synonym_id AND fs.feature_id = f.feature_id
+UNION
+SELECT fp.feature_id, CAST(substring(fp.value from 0 for 255) as varchar(255)) as name,f.organism_id FROM featureprop fp, feature f
+  WHERE f.feature_id = fp.feature_id
+UNION
+SELECT fd.feature_id, d.accession, f.organism_id FROM feature_dbxref fd, dbxref d,feature f
+  WHERE fd.dbxref_id = d.dbxref_id AND fd.feature_id = f.feature_id;
+
